syntax = "proto3";

package pb;

import "user.proto";
option go_package = "github.com/Streamfair/streamfair_user_svc/pb";

message CreateUserRequest {
     string username = 1;
     string full_name = 2;
     string email = 3;
     string password = 4;
     string country_code = 5;
     int64  role_id = 6;
     string status = 7;
}

message CreateUserResponse {
    User user = 1;
}
